--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Webpage with font size</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <h2 style="background-color:tomato;">Heading</h2>
+    <p>My paragraph</p>
+    <a href="http://teh.ocsb.ca/">School Website</a>
+    <br>
+    <img src="https://doc-0c-as-docs.googleusercontent.com/docs/securesc/5q3llgeu20hjbkagnb8t3ceqv299a7eb/9gdn59hdiclhtknf57s93p7ehnliqo6l/1606276125000/18049682699827428803/09385540894111337915/17qfyQ8sk5vGFOd0ctFivaxYzYjZpuN20?e=view&authuser=0" alt="mths logo">
   </body>
 </html>
