--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Webpage with font size</title>
   </head>
   <body>
-    <h2 style="background-color:tomato;">Heading</h2>
+    <h2 style="background-color:Violet;">Heading</h2>
     <p>My paragraph</p>
     <a href="http://teh.ocsb.ca/">School Website</a>
     <br>
